update SimpleCommandManager.java